--- a/howto.html
+++ b/howto.html
@@ -35,7 +35,7 @@
     If the bot receives your location, a new point is added to the map indicating
     you can reach the mesh at that spot. If you want to also log places where you
     can't reach the mesh, there's a helpful web app you can run on your phone to
-    automate the process. To be "heard", your message must be heard by 
+    automate the process. To be "heard", your message repeats must be heard by 
     PugetMesh Haystack [86], WW7STR/PugetMesh Cougar [7e], or N7JMV-NEW-RP [53].
   </div>
 
