--- a/index.html
+++ b/index.html
@@ -27,5 +27,15 @@
     import { refreshCoverage } from './content/code.js';
     refreshCoverage();
   </script>
+
+  <!-- iOS Safari SVG shadow hack -->
+  <svg width="0" height="0" style="position:absolute">
+    <defs>
+      <filter id="marker-shadow" x="-50%" y="-50%" width="200%" height="200%">
+        <feDropShadow dx="1" dy="3" stdDeviation="1"
+          flood-color="black" flood-opacity="0.3"/>
+      </filter>
+    </defs>
+  </svg>
 </body>
 </html>
