Update region information in wardrive.html

--- a/wardrive.html
+++ b/wardrive.html
@@ -102,8 +102,8 @@
               href="https://apps.apple.com/us/app/bluefy-web-ble-browser/id1492822055">Bluefy on iOS</a>.</span>
         </div>
         <div class="text-xs italic text-slate-400">
-          <span>Only for <a class="underline" target="_blank" href="https://pugetmesh.org/meshcore/">PNW
-              region</a>.</span> <span>See <a class="underline" target="_blank" href="/howto">howto</a> for more info.
+          <span>Only for <a class="underline" target="_blank" href="https://cdme.sh">Capital District region of New York State.</a>.</span> 
+          <span>See <a class="underline" target="_blank" href="/howto">howto</a> for more info.
         </div>
       </section>
 
